<resources>
    <string name="app_name">ENGU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_note">Good ideas are the backbone of good \ngovernment. Ordinary people want \ngood government</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="email_phone">Email / Phone Number</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGOT PASSWORD</string>
    <string name="forget_password_small">Forgot Password?</string>
    <string name="signup">SIGN UP</string>
    <string name="login_now">LOGIN NOW </string>
    <string name="forgetpassword_note">Don’t worry, we have way to reset your password.\n enter your email address/Phone number in the following\n field &amp;  click Send request.</string>
    <string name="verification_note"> Please enter the 6 digit verification code sent to \n test@gmail.com/no to confirm your email address.</string>
    <string name="verify_your_email">VERIFY YOUR EMAIL</string>
    <string name="verify">VERIFY</string>
    <string name="back">BACK</string>
    <string name="verify_email_id">VERIFY EMAIL ID </string>
    <string name="resend">Resend</string>
    <string name="otp"> OTP</string>
    <string name="choose_your_preference">CHOOSE YOUR PREFERENCE</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_swift_code">Confirm Swift Code</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="signup_now">SIGNUP NOW </string>
    <string name="send_request">SEND REQUEST </string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_your_middle_name">Enter your middle name</string>
    <string name="next">NEXT</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_your_bank">Select your bank</string>
    <string name="account_number">Account Number</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="re_enter_account_number">Re enter Account Number</string>
    <string name="re_enter_your_account_number">Re enter your account number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="enter_account_holder_name">Enter account holder name</string>
    <string name="swift_code">Swift Code</string>
    <string name="bank_code">Bank Code</string>
    <string name="enter_your_bank_code">Enter your bank code</string>
    <string name="account_type">Account Type</string>
    <string name="select_account_type">Select account type</string>
    <string name="enable_auto_renewal">Enable auto renewal</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="hr_mm">hr/mm</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="lga">LGA</string>
    <string name="enter_lga">Enter LGA</string>
    <string name="enter_name_of_next_of_kin">Enter name of next of Kin</string>
    <string name="enter_email_of_next_of_kin">Enter email of next of Kin</string>
    <string name="enter_phone_number_of_next_of_kin">Enter phone number of next of Kin</string>
    <string name="next_of_kin_phone">Next of Kin Phone</string>
    <string name="next_of_kin_address">Next of Kin Address</string>
    <string name="next_of_kin_pincode">Next of Kin Pincode</string>
    <string name="enter_address_of_next_of_kin">Enter address of next of Kin</string>
    <string name="enter_pincode_of_next_of_kin">Enter pincode of next of Kin</string>
    <string name="sub_treasury">Sub Treasury</string>
    <string name="enter_your_sub_treasury">Enter your sub treasury</string>
    <string name="date_of_appointment">Date Of Joining</string>
    <string name="last_grade">Current Grade</string>
    <string name="enter_your_last_grade">Enter your last grade</string>
    <string name="occupation_type">Occupation Type</string>
    <string name="enter_your_occupation">Enter your occupation</string>
    <string name="next_of_kin_email_address">Next of Kin email Address</string>
    <string name="name_of_next_of_kin">Name of Next of Kin</string>
    <string name="last_promotion_year">Last Promotion year</string>
    <string name="yyyy">yyyy</string>
    <string name="grade_level">Grade Level</string>
    <string name="enter_grade_level">Enter grade level</string>
    <string name="date_of_retirement">Date of Retirement</string>
    <string name="position_last_held">Position Last held</string>
    <string name="enter_your_last_position_held">Enter your last position held</string>
    <string name="upload_application_form">Upload Application form</string>
    <string name="application_form">Application form</string>
    <string name="upload">Upload</string>
    <string name="promotion_letter_transfer_letter">Promotion Letter/Transfer letter</string>
    <string name="id_card">ID card</string>
    <string name="passport_photo">Passport Photo</string>
    <string name="view_profile"><u>View Profile</u></string>
    <string name="set_as_primary_account">Set as Primary Account</string>
    <string name="close">CLOSE</string>
    <string name="submit">SUBMIT</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_slot">Booking Slot</string>
    <string name="pay_now">PAY NOW</string>
    <string name="book_now">BOOK NOW</string>
    <string name="select_bank_account">Select Bank Account</string>
    <string name="top_up_wallet">Top up wallet</string>
    <string name="top_up_wallet_2">TOP UP WALLET</string>
    <string name="set_auto_deduction">Set Auto Deduction</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="wallet_history">Wallet History</string>
    <string name="verification_history">Verification History</string>
    <string name="wallet_transaction_history">Wallet Transaction History</string>
    <string name="profile">Profile</string>
    <string name="ein">EIN</string>
    <string name="account">Account</string>
    <string name="description">Description</string>
    <string name="total_payable_amount">Total Payable Amount</string>
    <string name="current_account_balance">Current Account Balance</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="kin_of_profile">Kin of Profile</string>
    <string name="email_id">Email ID</string>
    <string name="phone">Phone</string>
    <string name="enter_valid_email_id_n_phone_number">Enter Valid Email ID\n/ Phone Number</string>
    <string name="enter_valid_username">Enter Valid User Name</string>
    <string name="enter_valid_email_id">Enter Valid Email ID</string>
    <string name="enter_valid_phoneno">Enter Valid Phone Number</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="enter_proper_password">Enter Proper Password</string>
    <string name="clearance_form">Clearance Form</string>
    <string name="local_government_pension_board">Local Government Pension Board</string>
    <string name="invalid_password_message">Password must have at least 8 characters, include uppercase and lowercase letters, a digit, and a special character</string>
    <string name="country">Country</string>
    <string name="specify_other">"Specify other occupation "</string>
    <string name="enter_your_pin">Enter Your Pincode</string>
    <string name="pincode">Pincode</string>
    <string name="reg_to_login">Click login to continue</string>
    <string name="fields_are_mandatory">" fields are Mandatory"</string>
    <string name="enter_ein_number">Enter Your EIN</string>
    <string name="et_ein">12345678-0001</string>
    <string name="enter_your_swiftcode">Enter your SwiftCode</string>
    <string name="specify_position">specify other position</string>
    <string name="bank_account_verification">Bank Account Verification</string>
    <string name="reverify">REVERIFY</string>
    <string name="verified">Verified</string>
    <string name="common_error_msg">Something went wrong</string>
    <string name="common_error_msg_2">Something went wrong, please try again!</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="no_bank_selected_msg">Please select a bank</string>
    <string name="invalid_amount_msg">Please enter a valid amount</string>
    <string name="date_not_selected_msg">Please select a date</string>
    <string name="slot_not_selected_msg">Please select a time slot</string>
    <string name="no_time_slots_msg">Unfortunately, there are no time slots available for the selected date.</string>
    <string name="select_date">Select Date</string>
    <string name="logout">Logout</string>
    <string name="no_internet_error">Please connect to internet and retry.</string>
    <string name="not_verified">Not Verified</string>
    <string name="valid_till_date">Valid till %s</string>
    <string name="ok">OK</string>
    <string name="choose_year">Choose year</string>
    <string name="choose_month">Choose month</string>
    <string name="select_input_msg">Please select %s</string>
    <string name="year_error_msg">Please select a valid year</string>
    <string name="enter_input_msg">Please enter a valid %s</string>
    <string name="date_of_birth">date of birth</string>
    <string name="gender">gender</string>
    <string name="name_of_next_kin">name of next of Kin</string>
    <string name="email_id_of_next_kin">email id of next of Kin</string>
    <string name="phone_num_of_next_kin">phone number next of Kin</string>
    <string name="address_of_next_kin">address of next of Kin</string>
    <string name="pincode_of_next_kin">pincode of next of Kin</string>
    <string name="local_pension_board">local pension board</string>
    <string name="other_position">other position</string>
    <string name="other_occupation">other occupation</string>
    <string name="account_statement">Account Statement</string>
    <string name="download_statement">DOWNLOAD STATEMENT</string>
    <string name="Statement_download_error_msg">Statement download failed, please try again later.</string>
    <string name="downloading_statement">Downloading account statement…</string>
    <string name="statement_file_name">Account Statement - %s</string>
    <string name="no_transaction">No transaction!</string>
    <string name="double_back_press_msg">Press back again to dismiss.</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="fail_size_exceed_error">File size exceeds the maximum limit of %d MB.</string>
</resources>