<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_20"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="Add Bank Details"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/sp_24" />

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:text="@string/select_bank" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:padding="@dimen/dp_6">

            <ImageView
                android:id="@+id/iv_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@drawable/ic_bank_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/sp_bank"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:dropDownVerticalOffset="38dp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_bank"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_bank_selection"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pb_bank"
                android:layout_width="@dimen/progress_bar_size_medium"
                android:layout_height="@dimen/progress_bar_size_medium"
                android:layout_marginEnd="@dimen/view_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/account_number" />

        <EditText
            android:id="@+id/et_account_number"
            style="@style/Style_text_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="@dimen/dp_16"
            android:hint="@string/enter_your_account_number"
            android:inputType="numberDecimal"
            android:maxLength="@integer/account_number_max_length"
            android:padding="@dimen/dp_12" />

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/re_enter_account_number" />

        <EditText
            android:id="@+id/et_account_number_reenter"
            style="@style/Style_text_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="@dimen/dp_16"
            android:hint="@string/re_enter_your_account_number"
            android:inputType="numberDecimal"
            android:maxLength="@integer/account_number_max_length"
            android:padding="@dimen/dp_12" />


        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/account_holder_name" />

        <EditText
            android:id="@+id/et_holder_name"
            style="@style/Style_text_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/dp_16"
            android:hint="@string/enter_account_holder_name"
            android:inputType="text"
            android:padding="@dimen/dp_12" />

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/swift_code" />

        <EditText
            android:id="@+id/et_swift_code"
            style="@style/Style_text_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:drawableStart="@drawable/ic_swiftcode"
            android:drawablePadding="@dimen/dp_16"
            android:hint="Enter your SwiftCode"
            android:inputType="text"
            android:padding="@dimen/dp_12" />

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/bank_code" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_bank_code"
                style="@style/Style_text_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_squarebox"
                android:drawableStart="@drawable/ic_bank_green"
                android:drawablePadding="@dimen/dp_16"
                android:hint="@string/enter_your_bank_code"
                android:inputType="text"
                android:maxLength="@integer/account_number_max_length"
                android:padding="@dimen/dp_12"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_bank_code_verification"
                style="@style/Style_text_title_verifytext"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dp_16"
                android:text="@string/verify"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/et_bank_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_bank_code" />

            <ProgressBar
                android:id="@+id/pb_verification"
                android:layout_width="@dimen/progress_bar_size_medium"
                android:layout_height="@dimen/progress_bar_size_medium"
                android:layout_marginEnd="@dimen/view_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Style_text_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/account_type" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_squarebox"
            android:padding="@dimen/dp_6">

            <ImageView
                android:id="@+id/iv_account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@drawable/ic_bank_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/sp_account_type"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:dropDownVerticalOffset="38dp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_account_type"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_account_type_selection"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_12"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                style="@style/Style_text_title_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/set_as_primary_account" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_12"
                android:layout_weight="1"
                android:background="@drawable/button_light_green"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:padding="@dimen/dp_12"
                    android:text="@string/close"
                    android:textColor="@color/green_middle"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:padding="@dimen/dp_12"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>